--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,24 +1,67 @@
-#mainTitle{
-    text-align: center;
-    color: white;
+body{
+    margin: 0px;
 }
 
 #welArea{
-    margin-top: -10px;
-    margi
-    background: url('../img/testImgBacke.jpg') center fixed;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    background-color: rgba(255,255,255,0.5);
+}
+
+h1{
+    text-align: center;
+    color: black;
+}
+
+.backgroundImg{
+    background: url(../img/testImgBacke.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     height: 100vh;
 }
 
 #navigationMenu{
+
+}
+
+#navigationMenu{
     list-style-type: none;
-    margin: auto;
+    margin: 0px auto auto auto;
     display: grid;
     grid-template-areas: "men1 men2 men3 men4 men5 men6";
     grid-template-columns: 15% 15% 15% 15% 15% 15%;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    background-color: #34495e;
+    font-size: 0;
 }
 
 #navigationMenu li{
-    margin: auto;
+    margin: auto 10px auto 10px;
+    line-height: 50px;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    text-transform: uppercase;
+    text-align: center;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+}
+
+#navigationMenu a {
+    color: white;
+    text-decoration: none;
+}
+
+#navigationMenu li:hover{
+    background-color: aqua;
 }
